[package]
name = "gossip_protocol"
version = "0.1.0"
edition = "2024"
description = "Federated multi-token gossip protocol in Rust"
license = "Apache-2.0"
readme = "README.md"
rust-version = "1.93"
keywords = ["crypto", "gossip", "network", "token", "validator"]
categories = ["cryptography::cryptocurrencies", "network-programming"]

[dependencies]
anyhow = "1.0"
argon2 = "0.5"
async-trait = "0.1"
axum = "0.7"
bs58 = "0.5"
chacha20poly1305 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
cron = "0.13"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
futures = "0.3"
hex = "0.4"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.48", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = { version = "2.5", features = ["serde"] }
uuid = { version = "1.18", features = ["serde", "v4"] }
wasmtime = "44.0.1"
wasmtime-wasi = { version = "44.0.1", default-features = false, features = ["p1"] }

[dev-dependencies]
tempfile = "3.12"
wat = "1.248"
